# yolo_ros

./: CMakeLists.txt  package.xml  requirements.txt  setup.py
cone_detection/: cone_detection_node.py
launch/: yolo_launch.py
pointcloud_filter/: pointcloud_filter_node.py
src/: cone_detection_node.py
utils/: pt2onnx.py
